--- a/aemedge/blocks/tabs/tabs.css
+++ b/aemedge/blocks/tabs/tabs.css
@@ -223,7 +223,7 @@
   }
   
   .rewards .tabs-container .tabs .tabs-panel{
-    padding: 0;
+    padding: 50px 0;
   }
 
   .rewards .tabs-container .tabs .tabs-panel h2{
@@ -232,15 +232,7 @@
     text-align: center;
     margin-top: 50px;
   }
-
 }
-
-@media (width >= 1200px) {
-  .tabs .tabs-list {
-    justify-content: center;
-  }
-}
-
 
 @media (width >= 1440px) {
   .rewards .tabs .tabs-list {
